--- a/build_production/3/index.html
+++ b/build_production/3/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TCPC éditions / Venezia</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/build/css/main.css?id=114dd6a64d2cc8410555">
-    </head>
-    <body class="">
-        <div class="container">
-            
-                OKLM
-            
-        </div>
-    </body>
+<html lang="fr" class="h-100">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>TCPC éditions / Venezia</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/build/css/main.css?id=114dd6a64d2cc8410555">
+</head>
+<body class="h-100">
+<div class="container h-100">
+
+    <div class="h-100 d-flex align-items-center justify-content-center">
+        <video autoplay playsinline width="100%">
+            <source src="https://80ans.s3.eu-west-3.amazonaws.com/TCPC/saluta.m4v" type="video/mp4">
+
+            Sorry, your browser doesn't support embedded videos.
+        </video>
+    </div>
+
+</div>
+</body>
 </html>
