--- a/build_production/3/index.html
+++ b/build_production/3/index.html
@@ -6,20 +6,22 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>TCPC éditions / Venezia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/build/css/main.css?id=114dd6a64d2cc8410555">
+    <link rel="stylesheet" href="/assets/build/css/main.css?id=40172ef5f36b6e906c34">
 </head>
 <body class="h-100">
-<div class="container h-100">
-
-    <div class="h-100 d-flex align-items-center justify-content-center">
-        <video controls width="100%" class="d-block d-md-none">
-            <source src="https://80ans.s3.eu-west-3.amazonaws.com/TCPC/saluta.m4v" type="video/mp4">
-        </video>
-        <video autoplay playsinline width="100%" class="d-none d-md-block">
-            <source src="https://80ans.s3.eu-west-3.amazonaws.com/TCPC/saluta.m4v" type="video/mp4">
-        </video>
+    <div id="app" class="container h-100">
+        <div class="h-100 d-flex align-items-center justify-content-center ">
+            <div class="position-relative">
+                <video playsinline width="100%" preload="auto" style="opacity: 0">
+                    <source src="https://80ans.s3.eu-west-3.amazonaws.com/TCPC/saluta-3.mp4" type="video/mp4">
+                </video>
+                <template v-if="loading">
+                    <div class="loading">chargement...</div>
+                </template>
+                <div class="play" role="button" tabindex="0" @click="handlePlayClicked"></div>
+            </div>
+        </div>
     </div>
-
-</div>
+    <script src="/assets/build/js/main.js?id=945c95cad1143e987622"></script>
 </body>
 </html>
