--- a/build_production/3/index.html
+++ b/build_production/3/index.html
@@ -6,22 +6,20 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>TCPC éditions / Venezia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/build/css/main.css?id=40172ef5f36b6e906c34">
+    <link rel="stylesheet" href="/assets/build/css/main.css?id=60e3260a173516f8b0cb">
 </head>
 <body class="h-100">
     <div id="app" class="container h-100">
-        <div class="h-100 d-flex align-items-center justify-content-center ">
+        <div class="h-100 d-flex align-items-center justify-content-center">
             <div class="position-relative">
-                <video playsinline width="100%" preload="auto" style="opacity: 0">
+                <video width="100%" preload="auto" style="opacity: 0" v-cloak>
                     <source src="https://80ans.s3.eu-west-3.amazonaws.com/TCPC/saluta-3.mp4" type="video/mp4">
                 </video>
-                <template v-if="loading">
-                    <div class="loading">chargement...</div>
-                </template>
-                <div class="play" role="button" tabindex="0" @click="handlePlayClicked"></div>
+                <div v-show="loading" class="loading">chargement...</div>
+                <div class="play" role="button" tabindex="0" @click="handlePlayClicked" v-cloak></div>
             </div>
         </div>
     </div>
-    <script src="/assets/build/js/main.js?id=945c95cad1143e987622"></script>
+    <script src="/assets/build/js/main.js?id=ab7c7394c078cc4f339e"></script>
 </body>
 </html>
